# kochan

./: .gitignore  README.md  build.py  flake.nix  pyproject.toml
.github/workflows/: python-package.yml
src/kochan/: main.py
src/kochan/core/: __init__.py  app.py
src/kochan/routes/: __init__.py  favicon.py  index.py
src/kochan/static/css/: index.css
src/kochan/templates/: index.html
tests/: test_routes.py
