[project]
name = "kochan"
version = "1.0.0"
description = "The reborn of 4chan Era"
authors = [{ name = "kaeeraa", email = "kaeeraa@nebula-nook.ru" }]
license = { file = "LICENSE" }
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = ["flask (>=3.1.0,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
