[tool.poetry]
name = "kochan"
version = "1.0.0"
description = "The reborn of 4chan Era"
authors = ["kaeeraa <kaeeraa@nebula-nook.ru>"]
license = "GPL-3.0-or-later"
readme = "docs/README.md"

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards",
]

build = "./build.py"

[tool.poetry.scripts]
kochan = 'kochan.main:run'

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
flask = "^3.1.0"
gunicorn = "^23.0.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^6.0.0"
pylint = "^3.3.4"
pytest = "^8.3.4"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
# wrong-import-order disabled, as isort fixes import order
disable = """
missing-module-docstring,
wrong-import-order
"""

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "Cython"]
build-backend = "poetry.core.masonry.api"
